--- a/index.html
+++ b/index.html
@@ -17,19 +17,35 @@
         </div>
         <div class="container">
             <div class="row1">
-                <div class="BLOCK">1</div>
-                <div class="BLOCK">2</div>
-                <div class="BLOCK">3</div>
-                <div class="BLOCK">4</div>
-                <div class="BLOCK">5</div>
-                <div class="BLOCK">6</div>
-                <div class="BLOCK">7</div>
-                <div class="BLOCK">8</div>
+                <div class="BLOCK">
+                    <img src="images/image 1.png" alt="Image 1">
+                </div> 
+                <div class="BLOCK">
+                    <img src="images/image 2.png" alt="Image 2">
+                </div>
+                <div class="BLOCK">
+                    <img src="images/image 3.png" alt="Image 3">
+                </div>
+                <div class="BLOCK">
+                    <img src="images/image 4.png" alt="Image 4">
+                </div>
+                <div class="BLOCK">
+                    <img src="images/image 5.png" alt="Image 5">
+                </div>
+                <div class="BLOCK">
+                    <img src="images/image 6.png" alt="Image 6">
+                </div>
+                <div class="BLOCK">
+                    <img src="images/image 7.png" alt="Image 7">
+                </div>
+                <div class="BLOCK">
+                    <img src="images/image 8.png" alt="Image 8">
+                </div>
             </div>
         </div>
 
     </section>
-    <section>
+    <!-- <section>
         <div class="contact-wrapper">
             <h3 class="title">contact information</h3>
             <ul>
@@ -49,6 +65,44 @@
             
         </div>
         </div>
-    </section>
+    </section> -->
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-section">
+                <img src="images/logo.png" alt="Logo" class="footer-logo">
+                <p>Lorem ipsum dolor sit amet consectetur. Mi nibh venenatis in suscipit turpis enim cursus vulputate amet. Lobortis mi platea aliquam senectus tempus mauris neque.</p>
+                <div class="social-icons">
+                    <a href="#">
+                        <img src="images/fb.png" alt="Facebook" class="social-logo">
+                        <img src="images/ig.png" alt="Instagram" class="social-logo">
+                        <img src="images/in.png" alt="LinkedIn" class="social-logo">
+                    </a>
+                </div>
+            </div>
+
+            <div class="footer-section">
+                <h4>Website Links</h4>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Get in Touch</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h4>Services</h4>
+                <ul>
+                    <li><a href="#">Asset Vault</a></li>
+                    <li><a href="#">Emotional Will</a></li>
+                    <li><a href="#">Time Capsule</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Languages</h4>
+                <button class="language-btn">English</button>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
